--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           -->
       </div>
     </section>
-    <section id="play_cards" class="bg-primary" style="display: none;">
+    <section id="play_cards" class="" style="display: none;">
       <div class="container pt-5">
         <h2 class="mt-5 text-center fw-semibold fs-1 my-4" id="timer">
           00:00:00
