--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
 
   
-    <section id="play_cards" class="bg-primary" style="display: none;">
+    <section id="play_cards" class="" style="display: none;">
       
 
         
