--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       </div>
       </section>
   <div>
-      <div class="container d-flex flex-column align-items-center justify-content-center p-4" id="instructions_container" style="display: none;">
+      <div class="container flex-column align-items-center justify-content-center p-4" id="instructions_container" style="display: none;">
         <div class="card p-2 p-md-4 col-8 col-lg-4 col-md-6 shadow border-2 border-secondary" >
           <div class="card-body">
             <div class="card-title divider"><h3>Heads Up!</h3></div>
