--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       
 
         
-      <div class="container pt-5" id="quiz_container">
+      <div class="container p-2 pt-md-5" id="quiz_container">
         <h2 class="mt-5 text-center fw-semibold fs-1 my-4" id="timer">
           00:00:00
         </h2>
@@ -197,7 +197,7 @@
         <div class="card-title"><h2 class="fst-italic fw-semibold">Score</h2></div></div>
         <div class="card-body d-flex justify-content-center"><h2 class="fw-semibold fst-italic" id="display_score"></h2></div>
       </div>
-        <div class="text-center mt-2 mt-sm-5 p-4 p-sm-5">
+        <div class="text-center mt-2 mt-md-4 p-4 p-sm-5">
           <button
             class="btn btn p-2 border border-black px-4 shadow mx-2"
             id="stop_btn"
