--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     />
   </head>
   <body>
+    <div class="container d-flex" id="loading_container" style="display: none;">
+      <svg viewBox="0 0 250 150" class="mx-auto" >
+        <text x="50%" y="50%" text-anchor="middle" class="fs-2 fst-italic fw-semibold" id="loading_text">
+          QuickFlash
+        </text>
+        <text x="50%" y="50%" dy="20%" text-anchor="middle" class="fst-italic" id="loading_text2">
+          loading assets
+        </text>
+      </svg>
+    </div>
+
+    <section id="site_content" style="display: none;">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
       <div class="container-fluid px-sm-5">
         <a href="#" class="navbar-brand px-3">QuickFlash</a>
@@ -216,6 +228,7 @@
     <section id="about">
       <div class="container"></div>
     </section>
+  </section>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
