--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </svg>
     </div>
 
-    <section id="site_content" style="display: none;">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+    <section id="site_content" style="display: none;" data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top" id="navbar">
       <div class="container-fluid px-sm-5">
         <a href="#" class="navbar-brand px-3">QuickFlash</a>
         <button
