--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
         </text>
       </svg>
     </div>
+    
+    <div id="modal_bg" style="display: none;"> </div>
+    <div id="delete_cards_modal" class="border border-secondary rounded-2 text-bg-light shadow px-2 pt-2 rounded-3" style="display: none;">
+      <div class="text-end">
+        <button class="btn-close modal_close_btn"></button>
+      </div>
+      <h4 class="fw-semibold border-bottom border-secondary pb-2 fst-italic text-center">Delete all cards</h4>
+      <p class="p-2">Are you sure you want to delete all existing cards? This action cannot be undone.</p>
+      <div class="px-2">
+        <div class="form-check mt-3">
+        <input type="checkbox" class="form-check-input border border-secondary" name="" id="dont_remind_cb">
+        <label for="" class="form-check-label" id="dont_remind_toggle">Don't remind me again</label>
+      </div>
+      <div class="d-flex justify-content-center mt-4">
+        <div class="btn border-secondary mx-2 p-2 modal_btn modal_close_btn">Cancel</div>
+        <div class="btn btn-dark mx-2 p-2 modal_btn" id="confirm_delete_btn">Delete</div>
+      </div>
+      </div>
+    </div>
+
+    <div id="small_modal" class="border border-secondary rounded-2 text-bg-light shadow px-2 pt-2 rounded-3" style="display: none;">
+      <div class="text-end">
+        <button class="btn-close modal_close_btn"></button>
+      </div>
+      <h4 class="fw-semibold border-bottom border-secondary pb-2 fst-italic text-center">No cards found</h4>
+      <p class="p-2">There are no existing cards. Create  a card to play.</p>
+    </div>
 
     <section id="site_content" style="display: none;" data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top" id="navbar">
@@ -59,7 +86,10 @@
     <section id="home">
       <div
         class="container d-flex justify-content-center align-items-center"
-      ></div>
+      >
+      <img src="https://i.pinimg.com/736x/cb/3e/01/cb3e014d6122af3b43933bb571859ae7.jpg" alt="" style="height: auto; max-width: 700px; width: 70vw;">
+      <h4 id="hahaha">no design yet</h4>
+    </div>
     </section>
     <section id="cards">
       <div class="container-fluid pt-5">
