--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
 
         <div class="mt-3 mt-sm-5 d-flex justify-content-center" id="">
-          <div class="rounded-4 mt-3" id="card_maker" style="display: none">
+          <div class="rounded-4 mt-3 zoom_out" id="card_maker" style="display: none">
             <div class="text-end p-2">
               <button
                 type="button"
